# msc-thesis-benchmarks

./: .gitignore  CMakeLists.txt  Makefile  Makefile.build  README.md
include/cuk/: stopwatch
include/cuk/mach/: stopwatch.hpp
include/cuk/posix/: stopwatch.hpp
results/compute-701-1.local/: README.md
results/compute-701-1.local/zeros/: 01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv
results/zeros/compute-701-1.local/: 03.csv  05.csv  06.csv  08.csv  09.csv  10.csv
scripts/: zeros.sh
src/: .gitignore  CMakeLists.txt  Makefile  lt-zeros-mat-loop-omp.cc  zeros-arma-zeros.cc  zeros-calloc.cc  zeros-malloc-memset.cc  zeros-mat-loop-omp.cc  zeros-mat-loop.cc  zeros-mat-zeros.cc  zeros.cc
